clusters/cluster0/kubernetes/apps/gregbob/gregbob/app/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gregbob
  namespace: gregbob
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gregbob.biggs.dog
spec:
  ingressClassName: external
  rules:
  - host: gregbob.biggs.dog
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: gregbob-service
            port:
              number: 8080
